--- a/wakhale1_rdfa.html
+++ b/wakhale1_rdfa.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 </head>
 
-<body vocab="http://schema.org/" typeof="EducationEvent" prefix="dbp: http://dbpedia.org/resource/" >
+<body name= "UMBCCSDepartment" vocab="http://schema.org/" typeof="EducationEvent" prefix="dbp: http://dbpedia.org/resource/" >
 
 <div style="text-align: center;font-family: 'Alegreya', serif; font-size: 24px;">
 
